--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-This repository contains executables and bash files of two data assimilation algorithms:
+This repository contains executables and bash files of two data assimilation:
 1. Ensemble Kalman filter (EnKF) with perturbed obervations.
-2. Indicator-based data assimilation (InDA)
