--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This repository contains executables and bash files of a data assimilation algorithm:
 Ensemble Kalman filter (EnKF) with perturbed obervations.
+goto https://github.com/DeveshKumar5/Data_Assimilation_EnKF/releases and follow the steps in README.txt to learn how to use this release
